--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "private": true,
   "license": "MIT",
   "type": "module",
-  "main": "build/main.js",
+  "main": "build/index.js",
   "scripts": {
     "build": "tsc",
     "build:changelog": "npx @discordx/changelog --src src",
-    "dev": "ts-node-esm src/main.ts",
-    "start": "node build/main.js",
-    "watch": "nodemon --exec ts-node-esm src/main.ts"
+    "dev": "ts-node-esm src/index.ts",
+    "start": "node build/index.js",
+    "watch": "nodemon --exec ts-node-esm src/index.ts",
+    "typesafe-i18n": "typesafe-i18n"
   },
   "dependencies": {
     "@discordx/importer": "^1.3.0",
     "discord.js": "^14.13.0",
-    "discordx": "^11.8.0"
+    "discordx": "^11.8.0",
+    "dotenv": "^16.3.1",
+    "typesafe-i18n": "^5.26.2"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
